--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
 <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
 
 
-home
+<h1>MPC APP</h1>
+
+<button class="mpc-key">A</button>
+<button class="mpc-key">B</button>
+<button class="mpc-key">C</button>
+<button class="mpc-key">D</button>
+<button class="mpc-key">E</button>
+<button class="mpc-key">F</button>
