--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
-<script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js" ></script>
 
 
 <h1>MPC APP</h1>
 
-<button class="mpc-key">A</button>
-<button class="mpc-key">B</button>
-<button class="mpc-key">C</button>
-<button class="mpc-key">D</button>
-<button class="mpc-key">E</button>
-<button class="mpc-key">F</button>
+<button class="mpc-key" data-key-index="0">Q</button>
+<button class="mpc-key" data-key-index="1">W</button>
+<button class="mpc-key" data-key-index="2">E</button>
+<button class="mpc-key" data-key-index="3">R</button>
+<button class="mpc-key" data-key-index="4">T</button>
+<button class="mpc-key" data-key-index="5">Y</button>
