--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,9 +4,10 @@
 
 <h1>MPC APP</h1>
 
-<button class="mpc-key" data-key-index="0">Q</button>
-<button class="mpc-key" data-key-index="1">W</button>
-<button class="mpc-key" data-key-index="2">E</button>
-<button class="mpc-key" data-key-index="3">R</button>
-<button class="mpc-key" data-key-index="4">T</button>
-<button class="mpc-key" data-key-index="5">Y</button>
+
+
+
+<div id="drum-pad">
+
+
+</div>
